<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_graph"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:background="@color/table_color_odd"
            app:layout_constraintEnd_toStartOf="@id/tvTitleY"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/value_x"
            android:id="@+id/tvTitleX"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:gravity="center"
            android:textAppearance="@style/TextTitle" />

        <TextView
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/table_color_odd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvTitleX"
            android:text="@string/value_y"
            android:id="@+id/tvTitleY"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:gravity="center"
            android:textAppearance="@style/TextTitle" />

        <androidx.recyclerview.widget.RecyclerView
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitleX"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:id="@+id/rvPointsTable"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="16dp"
            android:id="@+id/tvTitleGraph"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvPointsTable"
            android:text="@string/points_on_graph"
            android:textAppearance="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.eugene.testtaskfortechspire.ui.fragments.graph.GraphView
            android:background="@drawable/bg_graph"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tvTitleGraph"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="24dp"
            android:id="@+id/gvPointsGraph"
            android:layout_width="match_parent"
            android:layout_height="350dp" />

        <Button
            android:paddingHorizontal="8dp"
            android:textColor="@color/white"
            android:background="@color/purple_200"
            android:layout_marginVertical="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cbGraphSmooth"
            android:id="@+id/btnSaveGraph"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gvPointsGraph"
            android:text="@string/save_graph"
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>

        <CheckBox
            android:buttonTint="@color/purple_200"
            android:saveEnabled="true"
            android:id="@+id/cbGraphSmooth"
            app:layout_constraintBaseline_toBaselineOf="@id/btnSaveGraph"
            android:text="@string/graph_smooth_lines"
            app:layout_constraintStart_toEndOf="@id/btnSaveGraph"
            app:layout_constraintTop_toBottomOf="@id/gvPointsGraph"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>