<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitleInfo"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:gravity="center"
        android:text="@string/main_title_info"
        android:textAppearance="@style/TextTitle"
        app:layout_constraintBottom_toTopOf="@id/etPointsInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/etPointsInput"
        style="@style/TextInput"
        android:inputType="numberDecimal"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:backgroundTint="@color/purple_200"
        android:hint="@string/main_input_number_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnGo"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleInfo" />

    <Button
        android:id="@+id/btnGo"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@color/purple_200"
        android:textColor="@color/white"
        android:layout_marginStart="32dp"
        android:text="@string/main_go"
        app:layout_constraintBaseline_toBaselineOf="@id/etPointsInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/etPointsInput"/>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/pbLoadingProgress"
        android:indeterminateTint="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="@id/btnGo"
        app:layout_constraintTop_toTopOf="@id/btnGo"
        app:layout_constraintEnd_toEndOf="@id/btnGo"
        app:layout_constraintStart_toStartOf="@id/btnGo"
        android:layout_width="30dp"
        android:layout_height="30dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
